	compared to `int` to (A) explicitly avoid issues with the
	implementation-defined signedness of unqualified `char`, and (B)
	lay foundation for future migration of GNU troff's internal
	character type to a custom, wider type.

	* src/roff/troff/div.cpp (return_request):
	* src/roff/troff/reg.cpp (assign_register_format_request):
	* src/roff/troff/env.cpp (configure_tab_stops_request):
	Construct integer from character literal.
	* src/roff/troff/env.cpp (adjust):
	* src/roff/troff/reg.cpp (assign_register_format_request):
	Store return value of `tok.ch()` in local variable of `int`, not
	`char`, type.
	* src/roff/troff/env.cpp: Retype global `TAB_REPEAT_CHAR` from
	{`const`} `char` to `unsigned char`.

2025-11-27  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (read_size): Fix code style nit;
	compare integer-valued variable to integer literal instead of
	letting it pun down to a Boolean.

2025-11-26  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (do_get_long_name, read_size):
	* src/roff/troff/reg.cpp (assign_register_format_request): Fix
	code style nit; parenthesize formally complex expressions.

2025-11-25  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (do_name_test, return_macro_request):
	Fix code style nits.  Rather than letting an input character pun
	down to a Boolean value, compare it to an appropriate constant
	literal.

2025-11-25  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (read_identifier, do_get_long_name)
	(get_delimited_name): Fix code style nits.  Compare input
	character values to constant literals of appropriate type and
	signedness--they should be `unsigned char`s, since the formatter
	reads its input as bytes.

2025-11-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Trivially refactor.  Rename `token` class's member
	function `is_character()` to `is_any_character()` to try and get