@@ -11,9 +11,12 @@
 	* src/roff/troff/div.cpp (return_request):
 	* src/roff/troff/reg.cpp (assign_register_format_request):
 	* src/roff/troff/env.cpp (configure_tab_stops_request):
+	* src/roff/troff/number.cpp (get_incr_number)
+	(is_valid_expression, is_valid_term):
 	Construct integer from character literal.
 	* src/roff/troff/env.cpp (adjust):
 	* src/roff/troff/reg.cpp (assign_register_format_request):
+	* src/roff/troff/number.cpp (is_valid_term):
 	Store return value of `tok.ch()` in local variable of `int`, not
 	`char`, type.
 	* src/roff/troff/env.cpp: Retype global `TAB_REPEAT_CHAR` from
